--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world 21961079,이승미
+<!DOCTYPE html>
+<html>
+ <haed>
+     <title>콘텐츠 프로그래밍 사이트</title>
+     <!-- euc-kr, utf-8 한글 인코딩 -->
+     <meta charset="utf-8" />
+</haed>
+<body>
+
+ </body>
+</html>
+
+
+
+<a href="https:www.google.com" target="_blank">구글가기</a>
+<a href="file:///Users/kkyu/Documents/DP2019/training.html" target="_blank">HTML연습</a>
+<a href="file:///Users/kkyu/Documents/DP2019/html_part1.html" target="_blank">승미의 플레이리스트</a>
+<br />
