--- a/html_part1.html
+++ b/html_part1.html
@@ -79,7 +79,7 @@
                          <li>데뷔 : 2017년 싱글앨범 [긴 꿈]</li>
 
                      </ul>
-                     <a href="file:///Users/kkyu/Documents/DP2019/index.html" target=>돌아오기</a>
+                     <a href="index.html" target=>돌아오기</a>
 
     </body>
 </html>
