--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<a href="https:www.google.com" target="_blank">구글가기</a>
-<a href="file:///Users/kkyu/Documents/DP2019/training.html" target="_blank">HTML연습</a>
-<a href="file:///Users/kkyu/Documents/DP2019/html_part1.html" target="_blank">승미의 플레이리스트</a>
+<a href="https:www.google.com">구글가기</a>
+<a href="training.html">HTML연습</a>
+<a href="html_part1.html">승미의 플레이리스트</a>
 <br />
