--- a/training.html
+++ b/training.html
@@ -69,7 +69,7 @@
             <dd>순서에 중요한 의미가 있는 목록을 이야기 한다.</dd>
         </dl>
 
-        <a href="file:///Users/kkyu/Documents/DP2019/index.html" target=>돌아오기</a>
+        <a href="index.html" target=>돌아오기</a>
 
      </body>
 </html>
