--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 
 <a href="https://www.google.com" target="_blank">구글가기</a>
 <a href="training.html"> target=HTML연습</a>
-<a href="html_part1.html">target승미의 플레이리스트</a>
+<a href="html_part1.html">GROOVY EVERYWHERE</a>
+<a href="form.html">김원필 팬클럽 가입</a>
+<a href="html5.html">html5</a>
+
+
+
+
 <br />
