--- a/training.html
+++ b/training.html
@@ -69,7 +69,90 @@
             <dd>순서에 중요한 의미가 있는 목록을 이야기 한다.</dd>
         </dl>
 
+        <!-- strong, em <> b, i -->
+        <strong>강한 강조</strong>
+        <em>강조</em>
+
+        <b>볼드체</b>
+        <i>이텔릭체</i>
+
+        <!-- ins 첨부글, del 삭제글 <> u, strike-->
+        <ins>첨부하는 내용</ins>
+        <del>쓸데없는 내용. 변경되어 삭제될 내용</del>
+
+        <u>밑줄</u>
+        <strike>중간줄</strike>
+
+        <!-- sup 윗첨자, sub 아랫첨자 -->
+        2<sup>2</sup> : 제곱수, 2의 2승
+        H<sub>2</sub>0 : 물의 화학식
+
+        <img src="images/제삐.jpeg">
+        <img src="./images/제삐.jpeg">
+
+        <style>
+            table{
+                border: 1px solid black;
+            }
+            td{
+                border: 1px solid black;
+            }
+        </style>
+        <table>
+            <tr>
+                <td colspan="2">up</td>
+                <td rowspan="2">right</td>
+            </tr>
+            <tr>
+                <td rowspan="2">left</td>
+                <td>center</td>
+            </tr>
+            <tr>
+                <td colspan="2">down</td>
+            </tr>
+        </table>
+    </table>
+</body>
+</HTML>
+
+
         <a href="index.html" target=>돌아오기</a>
+
+        <form>
+            <input type="text" placeholder="아이디를 입력하세요." />
+            <input type="password" placeholder="패스워드를 입력하세요." />
+
+            <input type="radio" name="bt1" />
+            <input type="radio" name="bt1" />
+            <input type="radio" name="bt1" />
+            <!-- name이 동일 해야함 -->
+            <input type="radio" name="bt2" />
+            <input type="radio" name="bt2" />
+            <input type="radio" name="bt2" />
+    
+            <input type="checkbox" />
+            <input type="checkbox" />
+            <input type="checkbox" />
+            <input type="checkbox" />
+
+            <select>
+                <option>짜장면</option>
+                <option>짬뽕</option>
+            </select>
+
+            <textarea cols="3" raws="5"><!-- 가로 3글자, 세로 5줄 정도의 크기-->
+
+            </textarea>
+
+            <input type="button" value="버튼이름" />
+            <input type="button" value="테스트버튼" onclick="alert('테스트 버튼이 눌렸습니다.')" />
+
+            <input type="submit" value="제출" />
+
+
+
+
+        </form>
 
      </body>
 </html>
