--- a/html_part7.html
+++ b/html_part7.html
@@ -36,15 +36,15 @@
    
     <body>
         <div id="TV"> 
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/index.html" target="_blank">INDEX</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part1.html" target="_blank">MAIN</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part3.html" target="_blank">WHAT?</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part7.html" target="_blank">WHO?</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part2.html" target="_blank">WHY?</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part4.html" target="_blank">ALBUM</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part5.html" target="_blank">FEAT</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part6.html" target="_blank">TV</a></strong></nav>
-            <nav><strong><a href="file:///Users/kkyu/Documents/DP2019/html_part8.html" target="_blank">REVIEW</a></strong></nav>
+            <nav><strong><a href="index.html" target="_blank">INDEX</a></strong></nav>
+            <nav><strong><a href="html_part1.html" target="_blank">MAIN</a></strong></nav>
+            <nav><strong><a href="html_part3.html" target="_blank">WHAT?</a></strong></nav>
+            <nav><strong><a href="html_part7.html" target="_blank">WHO?</a></strong></nav>
+            <nav><strong><a href="html_part2.html" target="_blank">WHY?</a></strong></nav>
+            <nav><strong><a href="html_part4.html" target="_blank">ALBUM</a></strong></nav>
+            <nav><strong><a href="html_part5.html" target="_blank">FEAT</a></strong></nav>
+            <nav><strong><a href="html_part6.html" target="_blank">TV</a></strong></nav>
+            <nav><strong><a href="html_part8.html" target="_blank">REVIEW</a></strong></nav>
             </div>
             <section>
                     <h3>2.그루비룸은 누구인가?</h3>
