--- a/html_part7.html
+++ b/html_part7.html
@@ -47,7 +47,7 @@
             <nav><strong><a href="html_part8.html" target="_blank">REVIEW</a></strong></nav>
             </div>
             <section>
-                    <h3>2.그루비룸은 누구인가?</h3>
+                    <h3>2.그루비룸은 누구인가?/h3>
                     <p>위에서 언급했다시피 그루비룸은 동갑내기 친구인 <strong>규정</strong>과 <strong>휘민</strong>으로 구성되어있다.
                        <br/>또한, 그루비룸의 이름의 유래는 휘민이 "우리 그룹이름 뭘로 하지?"라는 질문에 규정이 그루비룸으로 하자라는 말장난으로 지어졌다고한다. <br/>
                     </style>
