--- a/html_part8.html
+++ b/html_part8.html
@@ -54,7 +54,7 @@
          <section>
               
         <h1>후  기</h1>
-        <br/><img src=images/인생참쓰다.jpg>
+        <br/><img src=images/인생참쓰다.JPG>
         <br/>1학기때는 유니티를 하면서 너무 힘들어서 중간에 포기하고싶었는데 html은 재밌어서 포기하지않고
         <br/>여기까지 올 수 있었던 것 같습니다.제가 좋아하는 아티스트에 대해 소개할 수 있어 재밌고 즐거운 맘으로
         <br/>수업에 임했습니다 감사합니다!
